trying to get something to build